# Chimera-LLM

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  To-do List.md  Work in Progress Tracker  pyproject.toml
.github/workflows/: lint_and_test.yaml
BrainLargeModelBinaryLatentTransformerLCM/: README.md  analyze_brain_encodings.py  analyze_brain_patterns.py  analyze_byte_encodings.py  analyze_character_understanding.py  analyze_eeg_patterns.py  analyze_entropy.py  analyze_entropy_patterns.py  benchmark_brain_encodings.py  benchmark_encodings.py  brain_aware_blt.py  bstar_memory.py  bstar_trainer.py  character_aware_blt.py  compare_brain_encodings.py  compare_encodings.py  complete_example.py  create_brain_visualizations.py  create_character_dataset.py  demo_bidirectional.py  eeg_encoder.py  entropy_model.py  evaluate_brain_encodings.py  evaluate_sonar_blt.py  evaluate_test_data.py  evaluate_text_eeg_mapping.py  example_byte_encoder.py  example_text_eeg.py  example_usage.py  extract_sonar_data.py  generate_brain_aware.py  generate_brain_examples.py  generate_character_aware.py  generate_hierarchical.py  generate_multilingual.py  generate_multimodal.py  generate_multimodal_sonar.py  generate_test_data.py  generate_text_from_eeg.py  hierarchical_blt.py  (+33 more)
OldUnusedData/BinaryLatentTransformerBLM(unused)/: binary_dataset.py  binary_example.py  blt_model.py  byte_decoder.py  byte_encoder.py
examples/evaluation/: README.md  instruction.yaml  prepare_evaluation_data.py
lcm/: __init__.py
lcm/cards/: TODO_2t_dummy_model.yaml  TODO_mse_dummy_model.yaml  sonar_byte_encoder.yaml  sonar_normalizer.yaml
lcm/cards/mock_data/: dummy_normalizer.pt
lcm/datacards/: datacards.yaml
lcm/datasets/: __init__.py  base.py  batch.py  configs.py  dataloader.py  dataloading.py  parquet_utils.py  prepare_wikipedia.py  registry.py  sentence_splitter.py  sentence_splitter_pipeline.py  smell_dataset.py  sound_dataset.py  utils.py  video_image_dataset.py
lcm/datasets/lcm/: __init__.py  dataloader.py
lcm/evaluation/: __init__.py  __main__.py  api.py  arun.py  run.py
lcm/evaluation/cli/: __init__.py  configs.py  local.py  params.py  slurm.py
lcm/evaluation/metrics/: __init__.py  coherence_metrics.py  common.py  multilingual_similarity.py  utils.py  (+4 more)
lcm/models/: __init__.py  sonar_byte_builder.py  sonar_byte_frontend.py  sonar_byte_registry.py
lcm/nn/: __init__.py  gated_sparse_autoencoder.py  incremental_state.py  initialization.py  normalization.py  projection.py  timestep_encoder.py
lcm/train/: __main__.py  common.py  criterion.py  metrics.py  optim.py  step_sampler.py  trainer.py
lcm/utils/: __init__.py  card_utils.py  common.py  data_utils.py  distributed.py  logging.py  model_type_registry.py
recipes/common/: evals.yaml  requirements.yaml
recipes/train/: README.md  defaults.yaml
scripts/: fit_embedding_normalizer.py  prepare_wikipedia.py
tests/: __init__.py  common.py  test_headers.py
tests/units/: conftest.py  test_recipes.py
(+91 files in other folders)
